--- a/land1/index.html
+++ b/land1/index.html
@@ -84,6 +84,33 @@
     	</div>
     </section>
 
+	<header class="container home-anchor">
+	<div class="row">
+		<div class="span5">
+			<h1 class="animated fadeInLeftBig animation-delay"><span class="subtitle">СУПЕР ПРЕДЛОЖЕНИЕ</span> ОТ КОТОРОГО НЕ ОТКАЗЫВАЮТСЯ!</h1>
+			<p class="animated fadeInLeftBig animation-delay">Любой Ваш текст. Например: закажите на сайте SmartLp.ru лендинг и получите настройку рекламы.  
+			<a href="#" class="scroll" id="infoslider">Узнайте больше»</a></p>
+			<div class="animated fadeInUp buttons-delay"><a id="download-button" class="button hover animated" href="#">Заказать прямо сейчас!</a></div>
+			<div class="store-buttons animated fadeInUp buttons-delay"></div>
+		</div>
+		<div class="span7 animated fadeInRightBig animation-delay">
+			<div class="notebookslider flexslider">
+			  <ul class="slides">
+			    <li>
+			      <img src="img/slide1.jpg" />
+			    </li>
+			    <li>
+			      <img src="img/slide2.jpg" />
+			    </li>
+			    <li>
+			      <img src="img/slide3.jpg" />
+			    </li>
+			  </ul>
+			</div>
+		</div>
+	</div>
+    </header>
+	
 	<section id="contact">
     <div class="container contact-anchor">
 			<p></p>
@@ -110,7 +137,7 @@
 			</div>
 			<div class="row">
 				<div class="span4">
-					<button type="submit" id="send-contact">Оформить заказ</button>
+					<button type="submit" id="send-contact" style="width: inherit;">Оформить заказ</button>
 				</div>
 				<div class="span4">
 					<p> </p>
@@ -148,7 +175,7 @@
 							</li>
     					<li>
 								<div style="display: flex">
-									<a class="select-package-button" href="#" style="padding-left: 50px; padding-right: 50px">Галич</a> 
+									<a class="select-package-button" href="#" style="padding-left: 50px; padding-right: 50px">Челябинец</a> 
 									<img src="img/gallery1.jpg" style="height: 100px"> 
 								</div>
 							</li>
@@ -197,9 +224,52 @@
     			</div>
     		</div-->
     	</div>
-    	<div class="row">
-    		<div class="span12"><p class="text-center"><strong>Здесь место для текста</strong> Можете написать что угодно <a href="#">)»</a></p></div>
-    	</div>
+		<div class="row">
+			<div class="span1">
+				<img src="img/foot/006.png">	
+			</div>
+			<div class="span3">
+				<p>ДОСТАВКА ЗА 1 ДЕНЬ</p>
+				<p>Отправляем грузы ежедневно любой транспортной компанией</p>
+			</div>
+			<div class="span1">
+				<img src="img/foot/007.png">	
+			</div>
+			<div class="span3">
+				<p>ГАРАНТИЯ</p>
+				<p>Собственная система контроля качества, плюс гарантия от производителя</p>
+			</div>
+			<div class="span1">
+				<img src="img/foot/008.png">	
+			</div>
+			<div class="span3">
+				<p>ВОЗВРАТ И ОБМЕН</p>
+				<p>В соответствии с законом о Защите прав потребителя</p>
+			</div>
+		</div>
+		<div class="row">
+			<div class="span1">
+				<img src="img/foot/009.png">	
+			</div>
+			<div class="span3">
+				<p>УДОБНЫЕ РАСЧЁТЫ</p>
+				<p>Индивидуальный подход системы оплаты к каждому покупателю</p>
+			</div>
+			<div class="span1">
+				<img src="img/foot/010.png">	
+			</div>
+			<div class="span3">
+				<p>НАДЁЖНОСТЬ</p>
+				<p>Нам доверяют крупные российские компании такие как Роснефть, Русал, УГМК Холдинг и т.д.</p>
+			</div>
+			<div class="span1">
+				<img src="img/foot/011.png">	
+			</div>
+			<div class="span3">
+				<p>ДОЛГОСРОЧНЫЕ ОТНОШЕНИЯ</p>
+				<p>Индивидуальные системы скидок</p>
+			</div>
+		</div>
     </section>
     
     <section id="gallery">
