нормальные краны сбоку

--- a/land1/index.html
+++ b/land1/index.html
@@ -143,7 +143,7 @@
 					<p> </p>
 				</div>
 				<div class="span4">
-					<button type="submit" id="send-contact">Получить коммерческое предложение на почту</button>
+					<button type="submit" id="send-contact" style="width: inherit;">Получить коммерческое предложение на почту</button>
 				</div>
 			</div>
 		</form>
@@ -151,43 +151,56 @@
     </section>    
     
     <section id="pricing" class="container pricing-anchor">
-    	<div class="row">
-    		<!--div class="span12">
-    			<h2 class="text-center">Вашие цены</h2>
-    			<p class="text-center">Здесь ваш текст</p>
-    		</div-->
-    	</div>
     	<div class="row pricing-table">
-    		<div class="span6 pricing-column-center" style="padding-right: 5px;">
-    			<div class="column premium">
-    				<!--div class="column-header">
-    					<h3 class="text-center package">Гидроподшиник 1</h3>
-    					<p class="text-center package-comment">Все для старта или другое</p>
-    					<h4 class="price text-center">$17</h4>
-    					<p class="payment-method text-center">за 1шт или за месяц</p>
-    				</div-->
-    				<ul class="benefits">
-    					<li>
-								<div style="display: flex">
-									<a class="select-package-button" href="#" style="padding-left: 50px; padding-right: 50px">Ивановец</a> 
-									<img src="img/gallery1.jpg" style="height: 100px"> 
-								</div>
-							</li>
-    					<li>
-								<div style="display: flex">
-									<a class="select-package-button" href="#" style="padding-left: 50px; padding-right: 50px">Челябинец</a> 
-									<img src="img/gallery1.jpg" style="height: 100px"> 
-								</div>
-							</li>
-    					<li>
-								<div style="display: flex">
-									<a class="select-package-button" href="#" style="padding-left: 50px; padding-right: 50px">Клинцы</a> 
-									<img src="img/gallery1.jpg" style="height: 100px"> 
-								</div>
-							</li>
-    				</ul>
-    				<!--a class="select-package-button" href="#">Купить</a-->
-    			</div>
+    		<div class="span6 pricing-column-center" style="padding-right: 5px; outline: 1px solid #c5c5c5;">
+    			<div class="row " style="padding-top: 3%;">
+    				<div class="span3">
+						<div class="btn-kran">
+							<button id="send-contact" style="width: inherit;">Ивановец</button>
+						</div>
+					</div>
+					<div class="span3">
+						<div class="img-kran">
+							<img src="img/gallery1.jpg" style="width: inherit;"> 
+						</div>
+					</div>
+				</div>
+				<div class="row " style="padding-top: 3%;">
+    				<div class="span3">
+						<div class="btn-kran">
+							<button id="send-contact" style="width: inherit;">Челябинец</button>
+						</div>
+					</div>
+					<div class="span3">
+						<div class="img-kran">
+							<img src="img/gallery1.jpg" style="width: inherit;"> 
+						</div>
+					</div>
+				</div>
+				<div class="row " style="padding-top: 3%;">
+    				<div class="span3">
+						<div class="btn-kran">
+							<button id="send-contact" style="width: inherit;">Гличанин</button>
+						</div>
+					</div>
+					<div class="span3">
+						<div class="img-kran">
+							<img src="img/gallery1.jpg" style="width: inherit;"> 
+						</div>
+					</div>
+				</div>
+				<div class="row " style="padding-top: 3%;">
+    				<div class="span3">
+						<div class="btn-kran">
+							<button id="send-contact" style="width: inherit;">Другие</button>
+						</div>
+					</div>
+					<div class="span3">
+						<div class="img-kran">
+							<img src="img/gallery1.jpg" style="width: inherit;"> 
+						</div>
+					</div>
+				</div>
     		</div>
 				<div class="span6 pricing-column-center" style="padding-left: 5px;">
     			<div class="column premium">
@@ -214,24 +227,7 @@
     				<!--a class="select-package-button" href="#">Купить</a-->
     			</div>
     		</div>
-    		<!--div class="span6 pricing-column-right">
-    			<div class="column business">
-    				<div class="column-header">
-    					<h3 class="text-center package">Гидроподшиник 3</h3>
-    					<p class="text-center package-comment">Еще Ваш текст</p>
-    					<h4 class="price text-center">$67</h4>
-    					<p class="payment-method text-center">за 10 штук</p>
-    				</div>
-    				<ul class="benefits">
-    				<li>Особенность 1</li>
-    					<li>Особенность 2</li>
-    					<li>Особенность 3</li>
-    					<li>Особенность 4</li>
-    					<li>Особенность 5</li>
-    				</ul>
-    				<a class="select-package-button" href="#">Купить</a>
-    			</div>
-    		</div-->
+    		
     	</div>
 		<div class="row">
 			<div class="span1">
