седлал красивый логотип и добавил краны

--- a/land1/index.html
+++ b/land1/index.html
@@ -178,7 +178,7 @@
 					</div>
 					<div class="span3">
 						<div class="img-kran">
-							<img src="img/gallery1.jpg" style="width: inherit;"> 
+							<img src="img/ivanovec.jpg" style="width: inherit;"> 
 						</div>
 					</div>
 				</div>
@@ -190,7 +190,7 @@
 					</div>
 					<div class="span3">
 						<div class="img-kran">
-							<img src="img/gallery1.jpg" style="width: inherit;"> 
+							<img src="img/chelab.jpg" style="width: inherit;"> 
 						</div>
 					</div>
 				</div>
@@ -202,7 +202,7 @@
 					</div>
 					<div class="span3">
 						<div class="img-kran">
-							<img src="img/gallery1.jpg" style="width: inherit;"> 
+							<img src="img/glinchanin.jpg" style="width: inherit;"> 
 						</div>
 					</div>
 				</div>
@@ -214,7 +214,7 @@
 					</div>
 					<div class="span3">
 						<div class="img-kran">
-							<img src="img/gallery1.jpg" style="width: inherit;"> 
+							<img src="img/klinci.jpg" style="width: inherit;"> 
 						</div>
 					</div>
 				</div>
