--- a/land1/index.html
+++ b/land1/index.html
@@ -298,7 +298,7 @@
     		<div class="row">
     			<div class="span12">
     				<h2>Цикл производства</h2>
-    				<p>Еще место для текста, например для описания</p>
+    				<!--p>Еще место для текста, например для описания</p-->
     			</div>
 			</div>
 			<div class="row">
@@ -306,79 +306,130 @@
 				  <ul class="slides">
 				    <li>
 				      <div class="span3 gallery-img">
-				      	<a href="img/gallery1.jpg">
-			            	<img src="img/gallery1.jpg" alt="Screenshot" />
+				      	<a href="img/pr/1.jpg">
+			            	<img src="img/pr/1.jpg" alt="Screenshot" />
 			            	<span class="img-overlay"></span>
-			          	</a>
-			          	
+			          	</a> 	
 				      </div>
 				      <div class="span3 gallery-img">
-				      	<a href="img/gallery2.jpg">
-			            	<img src="img/gallery2.jpg" alt="Screenshot" />
-			            	<span class="img-overlay"></span>
-			          	</a>
-				      </div>
-				      <div class="span3 gallery-img">
-				      	<a href="img/gallery3.jpg">
-			            	<img src="img/gallery3.jpg" alt="Screenshot" />
+				      	<a href="img/pr/2.jpg">
+			            	<img src="img/pr/2.jpg" alt="Screenshot" />
 			            	<span class="img-overlay"></span>
 			          	</a>
 				      </div>
 				      <div class="span3 gallery-img">
-				      	<a href="img/gallery4.jpg">
-			            	<img src="img/gallery4.jpg" alt="Screenshot" />
-			            	<span class="img-overlay"></span>
-			          	</a>
-				      </div>
-				    </li>
-				    <li>
-				      <div class="span3 gallery-img">
-				      	<a href="img/gallery2.jpg">
-			            	<img src="img/gallery2.jpg" alt="Screenshot" />
+				      	<a href="img/pr/3.jpg">
+			            	<img src="img/pr/3.jpg" alt="Screenshot" />
 			            	<span class="img-overlay"></span>
 			          	</a>
 				      </div>
 				      <div class="span3 gallery-img">
-				      	<a href="img/gallery4.jpg">
-			            	<img src="img/gallery4.jpg" alt="Screenshot" />
-			            	<span class="img-overlay"></span>
-			          	</a>
-				      </div>
-				      <div class="span3 gallery-img">
-				      	<a href="img/gallery1.jpg">
-			            	<img src="img/gallery1.jpg" alt="Screenshot" />
-			            	<span class="img-overlay"></span>
-			          	</a>
-				      </div>
-				      <div class="span3 gallery-img">
-				      	<a href="img/gallery3.jpg">
-			            	<img src="img/gallery3.jpg" alt="Screenshot" />
+				      	<a href="img/pr/4.jpg">
+			            	<img src="img/pr/4.jpg" alt="Screenshot" />
 			            	<span class="img-overlay"></span>
 			          	</a>
 				      </div>
 				    </li>
 				    <li>
 				      <div class="span3 gallery-img">
-				      	<a href="img/gallery4.jpg">
-			            	<img src="img/gallery4.jpg" alt="Screenshot" />
+				      	<a href="img/pr/5.jpg">
+			            	<img src="img/pr/5.jpg" alt="Screenshot" />
 			            	<span class="img-overlay"></span>
 			          	</a>
 				      </div>
 				      <div class="span3 gallery-img">
-				      	<a href="img/gallery3.jpg">
-			            	<img src="img/gallery3.jpg" alt="Screenshot" />
+				      	<a href="img/pr/6.jpg">
+			            	<img src="img/pr/6.jpg" alt="Screenshot" />
 			            	<span class="img-overlay"></span>
 			          	</a>
 				      </div>
 				      <div class="span3 gallery-img">
-				      	<a href="img/gallery1.jpg">
-			            	<img src="img/gallery1.jpg" alt="Screenshot" />
+				      	<a href="img/pr/7.jpg">
+			            	<img src="img/pr/7.jpg" alt="Screenshot" />
 			            	<span class="img-overlay"></span>
 			          	</a>
 				      </div>
 				      <div class="span3 gallery-img">
-				      	<a href="img/gallery2.jpg">
-			            	<img src="img/gallery2.jpg" alt="Screenshot" />
+				      	<a href="img/pr/8.jpg">
+			            	<img src="img/pr/8.jpg" alt="Screenshot" />
+			            	<span class="img-overlay"></span>
+			          	</a>
+				      </div>
+				    </li>
+				    <li>
+				      <div class="span3 gallery-img">
+				      	<a href="img/pr/9.jpg">
+			            	<img src="img/pr/9.jpg" alt="Screenshot" />
+			            	<span class="img-overlay"></span>
+			          	</a>
+				      </div>
+				      <div class="span3 gallery-img">
+				      	<a href="img/pr/10.jpg">
+			            	<img src="img/pr/10.jpg" alt="Screenshot" />
+			            	<span class="img-overlay"></span>
+			          	</a>
+				      </div>
+				      <div class="span3 gallery-img">
+				      	<a href="img/pr/11.jpg">
+			            	<img src="img/pr/11.jpg" alt="Screenshot" />
+			            	<span class="img-overlay"></span>
+			          	</a>
+				      </div>
+				      <div class="span3 gallery-img">
+				      	<a href="img/pr/12.jpg">
+			            	<img src="img/pr/12.jpg" alt="Screenshot" />
+			            	<span class="img-overlay"></span>
+			          	</a>
+				      </div>
+				    </li>
+					<li>
+				      <div class="span3 gallery-img">
+				      	<a href="img/pr/13.jpg">
+			            	<img src="img/pr/13.jpg" alt="Screenshot" />
+			            	<span class="img-overlay"></span>
+			          	</a>
+				      </div>
+				      <div class="span3 gallery-img">
+				      	<a href="img/pr/14.jpg">
+			            	<img src="img/pr/14.jpg" alt="Screenshot" />
+			            	<span class="img-overlay"></span>
+			          	</a>
+				      </div>
+				      <div class="span3 gallery-img">
+				      	<a href="img/pr/15.jpg">
+			            	<img src="img/pr/15.jpg" alt="Screenshot" />
+			            	<span class="img-overlay"></span>
+			          	</a>
+				      </div>
+				      <div class="span3 gallery-img">
+				      	<a href="img/pr/16.jpg">
+			            	<img src="img/pr/16.jpg" alt="Screenshot" />
+			            	<span class="img-overlay"></span>
+			          	</a>
+				      </div>
+				    </li>
+					<li>
+				      <div class="span3 gallery-img">
+				      	<a href="img/pr/17.jpg">
+			            	<img src="img/pr/17.jpg" alt="Screenshot" />
+			            	<span class="img-overlay"></span>
+			          	</a>
+				      </div>
+				      <div class="span3 gallery-img">
+				      	<a href="img/pr/18.jpg">
+			            	<img src="img/pr/18.jpg" alt="Screenshot" />
+			            	<span class="img-overlay"></span>
+			          	</a>
+				      </div>
+				      <div class="span3 gallery-img">
+				      	<a href="img/pr/19.jpg">
+			            	<img src="img/pr/19.jpg" alt="Screenshot" />
+			            	<span class="img-overlay"></span>
+			          	</a>
+				      </div>
+				      <div class="span3 gallery-img">
+				      	<a href="img/pr/20.jpg">
+			            	<img src="img/pr/20.jpg" alt="Screenshot" />
 			            	<span class="img-overlay"></span>
 			          	</a>
 				      </div>
