--- a/land1/index.html
+++ b/land1/index.html
@@ -41,7 +41,7 @@
     <div class="navbar navbar-static-top">
       <div class="navbar-inner">
         <div class="container">
-          <a class="brand" href="#"><лого> Автокран Гидро Сервис</a>
+          <a class="brand" href="#"><b>Автокран Гидро Сервис</b></a>
         </div>
       </div>
     </div>
@@ -88,8 +88,24 @@
 	<div class="row">
 		<div class="span5">
 			<h1 class="animated fadeInLeftBig animation-delay"><span class="subtitle">СУПЕР ПРЕДЛОЖЕНИЕ</span> ОТ КОТОРОГО НЕ ОТКАЗЫВАЮТСЯ!</h1>
-			<p class="animated fadeInLeftBig animation-delay">Любой Ваш текст. Например: закажите на сайте SmartLp.ru лендинг и получите настройку рекламы.  
-			<a href="#" class="scroll" id="infoslider">Узнайте больше»</a></p>
+			<p class="animated fadeInLeftBig animation-delay"><b>Гидроцилинры выдвижения стрелы:</b></p>  
+			<!--a href="#" class="scroll" id="infoslider">Узнайте больше»</a-->
+			<div class="animated fadeInUp buttons-delay">
+				<ul>
+					<li>	КС-55713-1В.63.900-1	</li>
+					<li>	КС-45724-8.63.900-3К-01	</li>
+					<li>	КС-55713-1К-1.63.900	</li>
+					<li>	КС-55713-1К-2.63.900-2К	</li>
+					<li>	КС-55713-1К-2.63.900	</li>
+					<li>	КС-55713-1К-4.63.900-1	</li>
+					<li>	КС-55713-3К-4В.63.900	</li>
+					<li>	КС-65719-7К.63.900-1	</li>
+					<li>	КС-55713.1В.63.900-1А	</li>
+					<li>	ГЦ-150х125х7475	</li>
+					<li>	ГЦ-140х125х6000	</li>
+					<li>	ГЦ-125.100.6000.000-04	</li>
+				</ul>
+			</div>
 			<div class="animated fadeInUp buttons-delay"><a id="download-button" class="button hover animated" href="#">Заказать прямо сейчас!</a></div>
 			<div class="store-buttons animated fadeInUp buttons-delay"></div>
 		</div>
@@ -154,22 +170,74 @@
  
 	<!-- Modal -->
 	<div id="myModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-	<div class="modal-header">
-		<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-		<h3 id="myModalLabel">Modal header</h3>
-	</div>
-	<div class="modal-body">
-		<p>One fine body…</p>
-	</div>
-	<div class="modal-footer">
-		<button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
-		<button class="btn btn-primary">Save changes</button>
-	</div>
+		<div class="modal-header">
+			<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+			<h3 id="myModalLabel">Ивановец</h3>
+		</div>
+		<div class="modal-body">
+			<table class="table table-striped table-hover">
+				<tr>
+					<th>№</th>
+					<th>Назначение</th>
+					<th>Каталожное название</th>
+				</tr>
+				<tr>
+					<td>1.</td>
+					<td>Гидроопора</td>
+					<td>КС-45717.31.200-1</td>
+				</tr>
+				<tr>
+					<td>2.</td>
+					<td>Гидроопора</td>
+					<td>КС-45717.31.200-2</td>
+				</tr>
+				<tr>
+					<td>3.</td>
+					<td>Гидроцилиндр</td>
+					<td>КС-3574.31.300</td>
+				</tr>
+				<tr>
+					<td>4.</td>
+					<td>Гидроцилиндр</td>
+					<td>КС-3574.31.300-2</td>
+				</tr>
+				<tr>
+					<td>5.</td>
+					<td>Гидроцилиндр</td>
+					<td>КС-45717.31.300-1</td>
+				</tr>
+				<tr>
+					<td>6.</td>
+					<td>Гидроцилиндр</td>
+					<td>КС-45717.63.400-4</td>
+				</tr>
+				<tr>
+					<td>7.</td>
+					<td>Гидроцилиндр</td>
+					<td>КС-45721.31.300</td>
+				</tr>
+				<tr>
+					<td>8.</td>
+					<td>Гидроцилиндр</td>
+					<td>КС-45721.31.300 (с удлинителем КС-45721М.30.501)</td>
+				</tr>
+				<tr>
+					<td>9.</td>
+					<td>Гидроцилиндр</td>
+					<td>КС-4572А.63.400-01-1</td>
+				</tr>
+			</table>
+		</div>
+		<div class="modal-footer">
+			<p>Стоимость деталей можно уточнить у наших менеджеров</p>
+			<!--button class="btn" data-dismiss="modal" aria-hidden="true">Закрыть</button-->
+			<button class="mybtn">Заказать сейчас</button>
+		</div>
 	</div>
 
     <section id="pricing" class="container pricing-anchor">
     	<div class="row pricing-table">
-    		<div class="span6 pricing-column-center" style="padding-right: 5px; outline: 1px solid #c5c5c5;">
+    		<div class="span12 pricing-column-center" style="padding-right: 5px; outline: 1px solid #c5c5c5;">
     			<div class="row " style="padding-top: 3%;">
     				<div class="span3">
 						<div class="btn-kran">
@@ -181,9 +249,7 @@
 							<img src="img/ivanovec.jpg" style="width: inherit;"> 
 						</div>
 					</div>
-				</div>
-				<div class="row " style="padding-top: 3%;">
-    				<div class="span3">
+					<div class="span3">
 						<div class="btn-kran">
 							<button id="send-contact" style="width: inherit;" data-toggle="modal" data-target="#myModal">Челябинец</button>
 						</div>
@@ -197,7 +263,17 @@
 				<div class="row " style="padding-top: 3%;">
     				<div class="span3">
 						<div class="btn-kran">
-							<button id="send-contact" style="width: inherit;" data-toggle="modal" data-target="#myModal">Гличанин</button>
+							<button id="send-contact" style="width: inherit;" data-toggle="modal" data-target="#myModal">Клинцы</button>
+						</div>
+					</div>
+					<div class="span3">
+						<div class="img-kran">
+							<img src="img/klinci.jpg" style="width: inherit;"> 
+						</div>
+					</div>
+					<div class="span3">
+						<div class="btn-kran">
+							<button id="send-contact" style="width: inherit;" data-toggle="modal" data-target="#myModal">Другие модели</button>
 						</div>
 					</div>
 					<div class="span3">
@@ -206,44 +282,8 @@
 						</div>
 					</div>
 				</div>
-				<div class="row " style="padding-top: 3%;">
-    				<div class="span3">
-						<div class="btn-kran">
-							<button id="send-contact" style="width: inherit;" data-toggle="modal" data-target="#myModal">Другие</button>
-						</div>
-					</div>
-					<div class="span3">
-						<div class="img-kran">
-							<img src="img/klinci.jpg" style="width: inherit;"> 
-						</div>
-					</div>
-				</div>
     		</div>
-				<div class="span6 pricing-column-center" style="padding-left: 5px;">
-    			<div class="column premium">
-    				<div class="column-header">
-    					<h3 class="text-center package">Убедительно низкие цены</h3>
-    					<!--p class="payment-method text-center">Сравните и убедитесь сами</p-->
-    					<p class="payment-method text-center">Гидроцилиндры выдвижения стрелы</p>						
-    				</div>
-    				<ul class="benefits">
-    					<li>	КС-55713-1В.63.900-1	</li>
-						<li>	КС-45724-8.63.900-3К-01	</li>
-						<li>	КС-55713-1К-1.63.900	</li>
-						<li>	КС-55713-1К-2.63.900-2К	</li>
-						<li>	КС-55713-1К-2.63.900	</li>
-						<li>	КС-55713-1К-4.63.900-1	</li>
-						<li>	КС-55713-3К-4В.63.900	</li>
-						<li>	КС-65719-7К.63.900-1	</li>
-						<li>	КС-55713.1В.63.900-1А	</li>
-						<li>	ГЦ-150х125х7475	</li>
-						<li>	ГЦ-140х125х6000	</li>
-						<li>	ГЦ-125.100.6000.000-04	</li>
-
-    				</ul>
-    				<!--a class="select-package-button" href="#">Купить</a-->
-    			</div>
-    		</div>
+				
     	</div>
 		<div class="row">
 			<div class="span1">
@@ -473,9 +513,16 @@
 	<section id="testimonials" class="container testimonials-anchor">
 		<div class="row">
 			<div class="span12 text-center">
-				<p>Расширенный ассортимент продукции Вы сможете найте <a href="#">здесь</a> и <a href="#">здесь</a></p>
+				<h2>Больше информации</h2>
 			</div>
 		</div>
+		<div class="row clients">
+    		<div class="span12">
+	    		<div class="text-center">
+	    			<a href="http://ya.ru"><img src="img/ksp.png" alt="Комплексное снабжение предприятий" /></a>
+	    		</div>
+    		</div>
+    	</div>
 	</section>	
  
     <footer>
