--- a/land1/index.html
+++ b/land1/index.html
@@ -519,7 +519,7 @@
 		<div class="row clients">
     		<div class="span12">
 	    		<div class="text-center">
-	    			<a href="http://ya.ru"><img src="img/ksp.png" alt="Комплексное снабжение предприятий" /></a>
+	    			<a href="http://ya.ru"><img src="img/ksp.jpg" alt="Комплексное снабжение предприятий" /></a>
 	    		</div>
     		</div>
     	</div>
