краны красные буковки и больший шрифт в гидроцилиндрах

--- a/land1/index.html
+++ b/land1/index.html
@@ -131,7 +131,7 @@
 					<li>	ГЦ-140х125х6000	</li>
 					<li>	ГЦ-125.100.6000.000-04	</li>
 				</ul-->
-				<table class="table">
+				<table class="table" style="font-size: 20px;">
 					<tr> <td>КС-55713-1В.63.900-1</td> <td>206 500p</td> </tr>
 					<tr> <td>КС-45724-8.63.900-3К-01</td> <td>118 900p</td> </tr>
 					<tr> <td>КС-55713-1К-1.63.900</td> <td>132 500p</td> </tr>
@@ -377,7 +377,7 @@
     	<div class="container gallery-anchor">
     		<div class="row">
     			<div class="span12">
-    				<h2>Цикл производства</h2>
+    				<h2 class="text-center">Цикл производства</h2>
     				<!--p>Еще место для текста, например для описания</p-->
     			</div>
 			</div>
@@ -523,7 +523,7 @@
 	<section id="testimonials" class="container testimonials-anchor">
 		<div class="row">
 			<div class="span12 text-center">
-				<h2 style="padding-bottom: 20px">Нас снабжают</h2>
+				<h2 style="padding-bottom: 20px; color:#cc2424">Нас снабжают</h2>
 			</div>
 		</div>
     	<div class="row clients">
@@ -553,7 +553,7 @@
 	<section id="testimonials" class="container testimonials-anchor">
 		<div class="row">
 			<div class="span12 text-center">
-				<h2 style="padding-bottom: 20px">Больше информации</h2>
+				<h2 style="padding-bottom: 20px; color:#cc2424">Больше информации</h2>
 			</div>
 		</div>
 		<div class="row clients">
