--- a/index.html
+++ b/index.html
@@ -570,10 +570,16 @@
 	    	<a class="#" href="#"></a>
 	    </div>
 	    <div class="container">
-	    	<div class="row">
-	    		<div class="span12">
-	    			<p class="address text-center">АвтокранГидроСервис</p>
-	    			<p class="copyright text-center" >Все права принадлежат компании ООО "КСП"</p>
+	    	<div class="row" style="padding-top: 25px">
+	    		<div class="span6" style="padding-top: 15px">
+	    			<!--p class="address text-center">АвтокранГидроСервис</p-->
+	    			<p class="copyright text-left" >Все права принадлежат компании ООО "КСП"</p>
+	    		</div>
+                <div class="span6 text-right">
+	    			<a href="#" target="_blank" class="myico"><img src="img/soc/vk.png" width="50px"></a>
+	    			<a href="#" target="_blank" class="myico"><img src="img/soc/inst.png" width="50px"></a>
+	    			<a href="#" target="_blank" class="myico"><img src="img/soc/skype.png" width="50px"></a>
+	    			<a href="#" target="_blank" class="myico"><img src="img/soc/viber.png" width="50px"></a>
 	    		</div>
 	    	</div>
 	    </div>
