fix icons and buttons

--- a/index.html
+++ b/index.html
@@ -330,22 +330,22 @@
 				<img src="img/foot/006.png">	
 			</div>
 			<div class="span3">
-				<p>ДОСТАВКА ЗА 1 ДЕНЬ</p>
-				<p>Отправляем грузы ежедневно любой транспортной компанией</p>
+				<p class="red">ДОСТАВКА</p>
+				<p>Осуществляем отгрузку товаров с первого дня. Доставка любой транспортной компанией</p>
 			</div>
 			<div class="span1">
 				<img src="img/foot/007.png">	
 			</div>
 			<div class="span3">
-				<p>ГАРАНТИЯ</p>
-				<p>Собственная система контроля качества, плюс гарантия от производителя</p>
+				<p class="red">НАШИ ГАРАНТИИ</p>
+				<p>Мы отвечаем за качество продаваемой продукции. Каждый гидроцилиндр проходит заводские испытания</p>
 			</div>
 			<div class="span1">
 				<img src="img/foot/008.png">	
 			</div>
 			<div class="span3">
-				<p>ВОЗВРАТ И ОБМЕН</p>
-				<p>В соответствии с законом о Защите прав потребителя</p>
+				<p class="red">ВОЗВРАТ И ОБМЕН</p>
+				<p>Производим в соответсвии с законодательстовм РФ</p>
 			</div>
 		</div>
 		<div class="row">
@@ -353,22 +353,22 @@
 				<img src="img/foot/009.png">	
 			</div>
 			<div class="span3">
-				<p>УДОБНЫЕ РАСЧЁТЫ</p>
-				<p>Индивидуальный подход системы оплаты к каждому покупателю</p>
+				<p class="red">ОПЛАТА</p>
+				<p>Оплата осуществляется любым удобным способом, доступным клиенту. Мы пойдем к Вам на встречу!</p>
 			</div>
 			<div class="span1">
 				<img src="img/foot/010.png">	
 			</div>
 			<div class="span3">
-				<p>НАДЁЖНОСТЬ</p>
-				<p>Нам доверяют крупные российские компании такие как Роснефть, Русал, УГМК Холдинг и т.д.</p>
+				<p class="red">НАДЁЖНОСТЬ</p>
+				<p>Финансовая поддержка осуществляется компанией ООО "КСП"</p>
 			</div>
 			<div class="span1">
 				<img src="img/foot/011.png">	
 			</div>
 			<div class="span3">
-				<p>ДОЛГОСРОЧНЫЕ ОТНОШЕНИЯ</p>
-				<p>Индивидуальные системы скидок</p>
+				<p class="red">СКИДКИ И АКЦИИ</p>
+				<p>Мы с уважением относимся к своим клиентам и предоставляем им <span class="red">скидки до 5%</span></p>
 			</div>
 		</div>
     </section>
