отступ между горячей линией на телефоне

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 			<div class="span6">
 					<img src="img/logo-left.png">
 			</div>
-			<div class="span6">
+			<div class="span6 hotline">
 					<img src="img/logo-right.png">
 			</div>
 		</div>
