отсутпы серый блок, зеленая кнопка иконки соц сети

--- a/index.html
+++ b/index.html
@@ -524,7 +524,7 @@
 	<section id="testimonials" class="container testimonials-anchor">
 		<div class="row">
 			<div class="span12 text-center">
-				<h2 style="padding-bottom: 20px; color:#cc2424">Нас снабжают</h2>
+				<h2 style="padding-bottom: 55px; color:#cc2424">Нас снабжают</h2>
 			</div>
 		</div>
     	<div class="row clients">
@@ -551,19 +551,21 @@
     	</div>
     </section>
 
-	<section id="testimonials" class="container testimonials-anchor">
-		<div class="row">
-			<div class="span12 text-center">
-				<h2 style="padding-bottom: 20px; color:#cc2424">Больше информации</h2>
-			</div>
-		</div>
-		<div class="row clients">
-    		<div class="span12">
-	    		<div class="text-center">
-	    			<a href="http://ivksp.ru/"><img src="img/ksp.jpg" alt="Комплексное снабжение предприятий" /></a>
-	    		</div>
-    		</div>
-    	</div>
+	<section id="testimonials" class="contact2">
+        <div class="container">
+            <div class="row">
+                <div class="span12 text-center">
+                    <h2 style="padding-bottom: 50px; padding-top: 60px; color:#cc2424">Больше информации</h2>
+                </div>
+            </div>
+            <div class="row clients" style="padding-bottom: 80px;">
+                <div class="span12">
+                    <div class="text-center">
+                        <a href="http://ivksp.ru/"><img src="img/ksp.jpg" alt="Комплексное снабжение предприятий" /></a>
+                    </div>
+                </div>
+            </div>
+        </div>
 	</section>	
       
       <section id="testimonials" class="container testimonials-anchor">
@@ -591,7 +593,7 @@
 	    	<div class="row" style="padding-top: 25px">
 	    		<div class="span6" style="padding-top: 15px">
 	    			<!--p class="address text-center">АвтокранГидроСервис</p-->
-	    			<p class="copyright text-left" >Все права принадлежат компании ООО "КСП"</p>
+	    			<p class="copyright text-left" ><b>Все права принадлежат компании ООО "КСП"</b></p>
 	    		</div>
                 <div class="span6 text-right">
 	    			<a href="#" target="_blank" class="myico"><img src="img/soc/vk.png" width="50px"></a>
