--- a/index.html
+++ b/index.html
@@ -599,7 +599,7 @@
 	    			<p class="copyright text-left" ><b>Все права принадлежат компании ООО "КСП"</b></p>
 	    		</div>
                 <div class="span6 text-right">
-	    			<a href="#" target="_blank" class="myico"><img src="img/soc/vk.png" width="50px"></a>
+	    			<a href="https://vk.com/avgidroservice" target="_blank" class="myico"><img src="img/soc/vk.png" width="50px"></a>
 	    			<a href="#" target="_blank" class="myico"><img src="img/soc/inst.png" width="50px"></a>
 	    			<a href="#" target="_blank" class="myico"><img src="img/soc/skype.png" width="50px"></a>
 	    			<a href="#" target="_blank" class="myico"><img src="img/soc/viber.png" width="50px"></a>
