листание фоток в галерее

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     <link href="css/styles.css" rel="stylesheet">
     <link href="css/bootstrap-responsive.min.css" rel="stylesheet">
     <link href="css/animate.min.css" rel="stylesheet">
-    <link href="css/magnific-popup.css" rel="stylesheet">
+    <!--<link href="css/magnific-popup.css" rel="stylesheet">-->
+    <link href="css/lightbox.min.css" rel="stylesheet">
     <link href="css/button.css" rel="stylesheet">
 
 
@@ -387,25 +388,25 @@
 				  <ul class="slides">
 				    <li>
 				      <div class="span3 gallery-img">
-				      	<a href="img/pr/1.jpg">
+				      	<a href="img/pr/1.jpg" data-lightbox="roadtrip">
 			            	<img src="img/pr/1.jpg" alt="Screenshot" />
 			            	<span class="img-overlay"></span>
 			          	</a> 	
 				      </div>
 				      <div class="span3 gallery-img">
-				      	<a href="img/pr/2.jpg">
+				      	<a href="img/pr/2.jpg" data-lightbox="roadtrip">
 			            	<img src="img/pr/2.jpg" alt="Screenshot" />
 			            	<span class="img-overlay"></span>
 			          	</a>
 				      </div>
 				      <div class="span3 gallery-img">
-				      	<a href="img/pr/3.jpg">
+				      	<a href="img/pr/3.jpg" data-lightbox="roadtrip">
 			            	<img src="img/pr/3.jpg" alt="Screenshot" />
 			            	<span class="img-overlay"></span>
 			          	</a>
 				      </div>
 				      <div class="span3 gallery-img">
-				      	<a href="img/pr/4.jpg">
+				      	<a href="img/pr/4.jpg" data-lightbox="roadtrip">
 			            	<img src="img/pr/4.jpg" alt="Screenshot" />
 			            	<span class="img-overlay"></span>
 			          	</a>
@@ -413,25 +414,25 @@
 				    </li>
 				    <li>
 				      <div class="span3 gallery-img">
-				      	<a href="img/pr/5.jpg">
+				      	<a href="img/pr/5.jpg" data-lightbox="roadtrip">
 			            	<img src="img/pr/5.jpg" alt="Screenshot" />
 			            	<span class="img-overlay"></span>
 			          	</a>
 				      </div>
 				      <div class="span3 gallery-img">
-				      	<a href="img/pr/6.jpg">
+				      	<a href="img/pr/6.jpg" data-lightbox="roadtrip">
 			            	<img src="img/pr/6.jpg" alt="Screenshot" />
 			            	<span class="img-overlay"></span>
 			          	</a>
 				      </div>
 				      <div class="span3 gallery-img">
-				      	<a href="img/pr/7.jpg">
+				      	<a href="img/pr/7.jpg" data-lightbox="roadtrip">
 			            	<img src="img/pr/7.jpg" alt="Screenshot" />
 			            	<span class="img-overlay"></span>
 			          	</a>
 				      </div>
 				      <div class="span3 gallery-img">
-				      	<a href="img/pr/8.jpg">
+				      	<a href="img/pr/8.jpg" data-lightbox="roadtrip">
 			            	<img src="img/pr/8.jpg" alt="Screenshot" />
 			            	<span class="img-overlay"></span>
 			          	</a>
@@ -439,25 +440,25 @@
 				    </li>
 				    <li>
 				      <div class="span3 gallery-img">
-				      	<a href="img/pr/9.jpg">
+				      	<a href="img/pr/9.jpg" data-lightbox="roadtrip">
 			            	<img src="img/pr/9.jpg" alt="Screenshot" />
 			            	<span class="img-overlay"></span>
 			          	</a>
 				      </div>
 				      <div class="span3 gallery-img">
-				      	<a href="img/pr/10.jpg">
+				      	<a href="img/pr/10.jpg" data-lightbox="roadtrip">
 			            	<img src="img/pr/10.jpg" alt="Screenshot" />
 			            	<span class="img-overlay"></span>
 			          	</a>
 				      </div>
 				      <div class="span3 gallery-img">
-				      	<a href="img/pr/11.jpg">
+				      	<a href="img/pr/11.jpg" data-lightbox="roadtrip">
 			            	<img src="img/pr/11.jpg" alt="Screenshot" />
 			            	<span class="img-overlay"></span>
 			          	</a>
 				      </div>
 				      <div class="span3 gallery-img">
-				      	<a href="img/pr/12.jpg">
+				      	<a href="img/pr/12.jpg" data-lightbox="roadtrip">
 			            	<img src="img/pr/12.jpg" alt="Screenshot" />
 			            	<span class="img-overlay"></span>
 			          	</a>
@@ -465,25 +466,25 @@
 				    </li>
 					<li>
 				      <div class="span3 gallery-img">
-				      	<a href="img/pr/13.jpg">
+				      	<a href="img/pr/13.jpg" data-lightbox="roadtrip">
 			            	<img src="img/pr/13.jpg" alt="Screenshot" />
 			            	<span class="img-overlay"></span>
 			          	</a>
 				      </div>
 				      <div class="span3 gallery-img">
-				      	<a href="img/pr/14.jpg">
+				      	<a href="img/pr/14.jpg" data-lightbox="roadtrip">
 			            	<img src="img/pr/14.jpg" alt="Screenshot" />
 			            	<span class="img-overlay"></span>
 			          	</a>
 				      </div>
 				      <div class="span3 gallery-img">
-				      	<a href="img/pr/15.jpg">
+				      	<a href="img/pr/15.jpg" data-lightbox="roadtrip">
 			            	<img src="img/pr/15.jpg" alt="Screenshot" />
 			            	<span class="img-overlay"></span>
 			          	</a>
 				      </div>
 				      <div class="span3 gallery-img">
-				      	<a href="img/pr/16.jpg">
+				      	<a href="img/pr/16.jpg" data-lightbox="roadtrip">
 			            	<img src="img/pr/16.jpg" alt="Screenshot" />
 			            	<span class="img-overlay"></span>
 			          	</a>
@@ -491,25 +492,25 @@
 				    </li>
 					<li>
 				      <div class="span3 gallery-img">
-				      	<a href="img/pr/17.jpg">
+				      	<a href="img/pr/17.jpg" data-lightbox="roadtrip">
 			            	<img src="img/pr/17.jpg" alt="Screenshot" />
 			            	<span class="img-overlay"></span>
 			          	</a>
 				      </div>
 				      <div class="span3 gallery-img">
-				      	<a href="img/pr/18.jpg">
+				      	<a href="img/pr/18.jpg" data-lightbox="roadtrip">
 			            	<img src="img/pr/18.jpg" alt="Screenshot" />
 			            	<span class="img-overlay"></span>
 			          	</a>
 				      </div>
 				      <div class="span3 gallery-img">
-				      	<a href="img/pr/19.jpg">
+				      	<a href="img/pr/19.jpg" data-lightbox="roadtrip">
 			            	<img src="img/pr/19.jpg" alt="Screenshot" />
 			            	<span class="img-overlay"></span>
 			          	</a>
 				      </div>
 				      <div class="span3 gallery-img">
-				      	<a href="img/pr/20.jpg">
+				      	<a href="img/pr/20.jpg" data-lightbox="roadtrip">
 			            	<img src="img/pr/20.jpg" alt="Screenshot" />
 			            	<span class="img-overlay"></span>
 			          	</a>
@@ -629,7 +630,8 @@
     <script src="js/jquery-1.9.1.min.js"></script>
     <script src="js/jquery.flexslider-min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <script src="js/jquery.magnific-popup.min.js"></script>
+    <!--<script src="js/jquery.magnific-popup.min.js"></script>-->
+    <script src="js/lightbox.min.js"></script>
     <script src="js/jquery.simpleplaceholder.js"></script>
     <!--script src="js/gmap3.min.js"></script-->
     <script src="js/custom.js"></script>
